# network

./: .travis.yml  CMakeLists.txt  README.md
network_core/: CMakeLists.txt
network_core/include/network_core/: Constants.hpp  Exeption.hpp  Forward.hpp  Network.hpp
network_core/include/network_core/primitives/: Layer.hpp  Neuron.hpp  Primitive.hpp
network_core/include/network_core/utility/: ActivationFunctions.hpp
network_core/src/: Network.cpp  Neuron.cpp
network_example/: CMakeLists.txt  main.cpp
network_example/config/: default.json
network_example/dataset/: config.json
network_io/: CMakeLists.txt
network_io/include/network_io/: io.hpp
network_io/src/: io.cpp
